Adding endpoint for upgrade-risks-prediction
